@@ -20,14 +20,15 @@ scan \- Parse string using conversion specifiers in the style of sscanf
 
 .SH INTRODUCTION
 .PP
-This command parses fields from an input string in the same fashion as the
-ANSI C \fBsscanf\fR procedure and returns a count of the number of
+This command parses substrings from an input string in a fashion similar
+to the ANSI C \fBsscanf\fR procedure and returns a count of the number of
 conversions performed, or -1 if the end of the input string is reached
 before any conversions have been performed.  \fIString\fR gives the input
 to be parsed and \fIformat\fR indicates how to parse it, using \fB%\fR
 conversion specifiers as in \fBsscanf\fR.  Each \fIvarName\fR gives the
-name of a variable; when a field is scanned from \fIstring\fR the result is
-converted back into a string and assigned to the corresponding variable.
+name of a variable; when a substring is scanned from \fIstring\fR that
+matches a conversion specifier, the substring is assigned to the
+corresponding variable.
 If no \fIvarName\fR variables are specified, then \fBscan\fR works in an
 inline manner, returning the data that would otherwise be stored in the
 variables as a list.  In the inline case, an empty string is returned when
@@ -44,16 +45,16 @@ must match the next character of \fIstring\fR.
 When a \fB%\fR is encountered in \fIformat\fR, it indicates
 the start of a conversion specifier.
 A conversion specifier contains up to four fields after the \fB%\fR:
-a \fB*\fR, which indicates that the converted value is to be discarded 
-instead of assigned to a variable; a XPG3 position specifier; a number
-indicating a maximum field width; a field size modifier; and a
+a XPG3 position specifier (or a \fB*\fR to indicate the converted
+value is to be discarded instead of assigned to any variable); a number
+indicating a maximum substring width; a size modifier; and a
 conversion character.
 All of these fields are optional except for the conversion character.
 The fields that are present must appear in the order given above.
 .PP
 When \fBscan\fR finds a conversion specifier in \fIformat\fR, it
 first skips any white-space characters in \fIstring\fR (unless the
-specifier is \fB[\fR or \fBc\fR).
+conversion character is \fB[\fR or \fBc\fR).
 Then it converts the next input characters according to the 
 conversion specifier and stores the result in the variable given
 by the next argument to \fBscan\fR.
@@ -68,75 +69,75 @@ list must correspond to exactly one conversion specifier or an error
 is generated, or in the inline case, any position can be specified
 at most once and the empty positions will be filled in with empty strings.
 .PP
+.VS 8.5
+The size modifier field is used only when scanning a substring into
+one of Tcl's integer values.  The size modifier field dictates the
+integer range acceptable to be stored in a variable, or, for the inline
+case, in a position in the result list.
+The syntactically valid values for the size modifier are \fBh\fR, \fBL\fR,
+\fBl\fR, and \fBll\fR.  The \fBh\fR size modifier value is equivalent
+to the absence of a size modifier in the the conversion specifier.
+Either one indicates the integer range to be stored is limited to
+the same range produced by the \fBint()\fR function of the \fBexpr\fR
+command.  The \fBL\fR size modifier is equivalent to the \fBl\fR size
+modifer.  Either one indicates the integer range to be stored is
+limited to the same range produced by the \fBwide()\fR function of
+the \fBexpr\fR command.  The \fBll\fR size modifier indicates that
+the integer range ro be stored is unlimited.
+.VE 8.5
+.PP
 The following conversion characters are supported:
 .TP 10
 \fBd\fR
-The input field must be a decimal integer.
-It is read in and the value is stored in the variable as a decimal string.
-If the \fBl\fR or \fBL\fR field size modifier is given, the scanned
-value will have an internal representation that is at least 64-bits in
-size.
+The input substring must be a decimal integer.
+It is read in and the integer value is stored in the variable,
+truncated as required by the size modifier value.
 .TP 10
 \fBo\fR
-The input field must be an octal integer. It is read in and the 
-value is stored in the variable as a decimal string.
-If the \fBl\fR or \fBL\fR field size modifier is given, the scanned
-value will have an internal representation that is at least 64-bits in
-size.
-If the value exceeds MAX_INT (017777777777 on platforms using 32-bit
-integers when the \fBl\fR and \fBL\fR modifiers are not given), it
-will be truncated to a signed integer.  Hence, 037777777777 will
-appear as -1 on a 32-bit machine by default.
+The input substring must be an octal integer. It is read in and the 
+integer value is stored in the variable,
+truncated as required by the size modifier value.
 .TP 10
 \fBx\fR
-The input field must be a hexadecimal integer. It is read in 
-and the value is stored in the variable as a decimal string.
-If the \fBl\fR or \fBL\fR field size modifier is given, the scanned
-value will have an internal representation that is at least 64-bits in
-size.
-If the value exceeds MAX_INT (0x7FFFFFFF on platforms using 32-bit
-integers when the \fBl\fR and \fBL\fR modifiers are not given), it
-will be truncated to a signed integer.  Hence, 0xFFFFFFFF will appear
-as -1 on a 32-bit machine.
+The input substring must be a hexadecimal integer.
+It is read in and the integer value is stored in the variable,
+truncated as required by the size modifier value.
 .TP 10
 \fBu\fR
-The input field must be a decimal integer.  The value is stored in the
-variable as an unsigned decimal integer string.
-If the \fBl\fR or \fBL\fR field size modifier is given, the scanned
-value will have an internal representation that is at least 64-bits in
-size.
+The input substring must be a decimal integer.
+The integer value is truncated as required by the size modifier
+value, and the corresponding unsigned value for that truncated
+range is computed and stored in the variable as a decimal string.
+The conversion makes no sense without refernce to a truncation range,
+so the size modifer \fBll\fR is not permitted in combination
+with conversion character \fBu\fR.
 .TP 10
 \fBi\fR 
-The input field must be an integer.  The base (i.e. decimal, octal, or
+The input substring must be an integer.  The base (i.e. decimal, octal, or
 hexadecimal) is determined in the same fashion as described in
-\fBexpr\fR.  The value is stored in the variable as a decimal string.
-If the \fBl\fR or \fBL\fR field size modifier is given, the scanned
-value will have an internal representation that is at least 64-bits in
-size.
+\fBexpr\fR.  The integer value is stored in the variable,
+truncated as required by the size modifier value.
 .TP 10
 \fBc\fR
-A single character is read in and its binary value is stored in 
-the variable as a decimal string.
+A single character is read in and its Unicode value is stored in 
+the variable as an integer value.
 Initial white space is not skipped in this case, so the input
-field may be a white-space character.
-This conversion is different from the ANSI standard in that the
-input field always consists of a single character and no field
-width may be specified.
+substring may be a white-space character.
 .TP 10
 \fBs\fR
-The input field consists of all the characters up to the next 
+The input substring consists of all the characters up to the next 
 white-space character; the characters are copied to the variable.
 .TP 10
 \fBe\fR or \fBf\fR or \fBg\fR
-The input field must be a floating-point number consisting 
+The input substring must be a floating-point number consisting 
 of an optional sign, a string of decimal digits possibly
 containing a decimal point, and an optional exponent consisting 
 of an \fBe\fR or \fBE\fR followed by an optional sign and a string of 
 decimal digits.
-It is read in and stored in the variable as a floating-point string.
+It is read in and stored in the variable as a floating-point value.
 .TP 10
 \fB[\fIchars\fB]\fR
-The input field consists of one or more characters in \fIchars\fR.
+The input substring consists of one or more characters in \fIchars\fR.
 The matching string is stored in the variable.
 If the first character between the brackets is a \fB]\fR then
 it is treated as part of \fIchars\fR rather than the closing
@@ -148,7 +149,7 @@ If the first or last character between the brackets is a \fB\-\fR, then
 it is treated as part of \fIchars\fR rather than indicating a range.
 .TP 10
 \fB[^\fIchars\fB]\fR
-The input field consists of one or more characters not in \fIchars\fR.
+The input substring consists of one or more characters not in \fIchars\fR.
 The matching string is stored in the variable.
 If the character immediately following the \fB^\fR is a \fB]\fR then it is 
 treated as part of the set rather than the closing bracket for 
@@ -158,7 +159,7 @@ contains a sequence of the form \fIa\fB\-\fIb\fR then any
 character between \fIa\fR and \fIb\fR (inclusive) will be excluded
 from the set.
 If the first or last character between the brackets is a \fB\-\fR, then
-it is treated as part of \fIchars\fR rather than indicating a range.
+it is treated as part of \fIchars\fR rather than indicating a ranvaluege.
 .TP 10
 \fBn\fR
 No input is consumed from the input string.  Instead, the total number
@@ -168,8 +169,8 @@ The number of characters read from the input for a conversion is the
 largest number that makes sense for that particular conversion (e.g.
 as many decimal digits as possible for \fB%d\fR, as 
 many octal digits as possible for \fB%o\fR, and so on).
-The input field for a given conversion terminates either when a
-white-space character is encountered or when the maximum field 
+The input substring for a given conversion terminates either when a
+white-space character is encountered or when the maximum substring 
 width has been reached, whichever comes first.
 If a \fB*\fR is present in the conversion specifier 
 then no variable is assigned and the next scan argument is not consumed.
@@ -178,22 +179,23 @@ then no variable is assigned and the next scan argument is not consumed.
 The behavior of the \fBscan\fR command is the same as the behavior of
 the ANSI C \fBsscanf\fR procedure except for the following differences:
 .IP [1]
-\fB%p\fR conversion specifier is not currently supported.
+\fB%p\fR conversion specifier is not supported.
 .IP [2]
 For \fB%c\fR conversions a single character value is
 converted to a decimal string, which is then assigned to the
 corresponding \fIvarName\fR;
-no field width may be specified for this conversion.
+no substring width may be specified for this conversion.
 .IP [3]
 The \fBh\fR modifier is always ignored and the \fBl\fR and \fBL\fR
 modifiers are ignored when converting real values (i.e. type
-\fBdouble\fR is used for the internal representation).
+\fBdouble\fR is used for the internal representation).  The \fBll\fR
+modifier has no \fBsscanf\fR counterpart.
 .IP [4]
 If the end of the input string is reached before any conversions have been
 performed and no variables are given, an empty string is returned.
 .SH EXAMPLES
 Parse a simple color specification of the form \fI#RRGGBB\fR using
-hexadecimal conversions with field sizes:
+hexadecimal conversions with substring sizes:
 .CS
 set string "#08D03F"
 \fBscan\fR $string "#%2x%2x%2x" r g b
@@ -240,6 +242,21 @@ if {
 }
 puts "X=$x, Y=$y"
 .CE
+.PP
+.VS 8.5
+An interactive session demonstrating the truncation of integer
+values determined by size modifiers:
+.CS
+% set tcl_platform(wordSize)
+4
+% scan 20000000000000000000 %d
+2147483647
+% scan 20000000000000000000 %ld
+9223372036854775807
+% scan 20000000000000000000 %lld
+20000000000000000000
+.CE
+.VE 8.5
 
 .SH "SEE ALSO"
 format(n), sscanf(3)
